Removed unused EphemeryNetwork class, test and update max ephemery slot import in EphemeryValidationService and test file
Signed-off-by: gconnect <agatevureglory@gmail.com>